# optic-domain-rust

./: Cargo.toml
src/: main.rs
src/aggregate/: mod.rs  requests.rs  rfc.rs  shape.rs
src/events/: mod.rs  requests.rs  rfc.rs  shape.rs
src/state/: mod.rs  requests.rs  shape.rs
